--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ SALT_ROUNDS=10
 ACCESS_JWT_SECRET=accessjwtsecretkey
 REFRESH_JWT_SECRET=refreshjwtsecretkey
 
+github_token=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
+
+git remote set-url origin https://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@github.com/SinghArpit27/inventory-management-system.git
